src/render/snapshots/dlin__render__json__tests__snapshot_json_with_sql.snap
---
source: src/render/json.rs
expression: output
---
{
  "nodes": [
    {
      "file_path": "models/orders.sql",
      "label": "orders",
      "materialization": "table",
      "node_type": "model",
      "sql_content": "SELECT * FROM {{ ref('stg_orders') }}",
      "unique_id": "model.orders"
    },
    {
      "label": "raw.orders",
      "node_type": "source",
      "unique_id": "source.raw.orders"
    }
  ],
  "edges": []
}
