src/render/snapshots/dlin__render__json__tests__snapshot_lineage.snap
---
source: src/render/json.rs
expression: output
---
{
  "nodes": [
    {
      "unique_id": "exposure.dashboard",
      "label": "dashboard",
      "node_type": "exposure"
    },
    {
      "unique_id": "model.orders",
      "label": "orders",
      "node_type": "model"
    },
    {
      "unique_id": "model.stg_orders",
      "label": "stg_orders",
      "node_type": "model"
    },
    {
      "unique_id": "source.raw.orders",
      "label": "raw.orders",
      "node_type": "source"
    },
    {
      "unique_id": "test.orders_positive",
      "label": "orders_positive",
      "node_type": "test"
    }
  ],
  "edges": [
    {
      "source": "model.orders",
      "target": "exposure.dashboard",
      "edge_type": "exposure"
    },
    {
      "source": "model.orders",
      "target": "test.orders_positive",
      "edge_type": "test"
    },
    {
      "source": "model.stg_orders",
      "target": "model.orders",
      "edge_type": "ref"
    },
    {
      "source": "source.raw.orders",
      "target": "model.stg_orders",
      "edge_type": "source"
    }
  ]
}
